test_suite5/ALAN/test_suite/alan-2022-examples/failing/001010_mutation.alan
source t begin boolean S; while 085 do relax end relax end
